--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+.tree {
+  max-width: 100vw;
+  max-height: 100vh;
+}
+#canvas {
+  width: 100%;
+  height: 100%;
+}
