--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,6 @@
 #canvas {
   width: 100%;
   height: 100%;
+  background-color: #000000;
+  background-image: linear-gradient(315deg, #000000 100%, #010101 100%);
 }
